Updating policy with appropriate resource arns

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,9 +5,9 @@ env:
   variables:
     mktip_var: "AWSCODEBUILDSPEC"
   paramter-store:
-    nuget_user: /Development/test-nuget-user
+    nuget_user: test-nuget-username
     nuget_password: test-nuget-password
-    nuget_feed_value: test-nuget-feed-value-unsecure
+    nuget_feed_value: test-nuget-feed-value
 
 phases:
   install:
