--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,7 +14,7 @@ phases:
     runtime-versions:
       docker: 18
       dotnet: 2.2
-  pre-build:
+  pre_build:
     commands:
       - ./test.sh $(aws ssem get-parameters --names "test-nuget-feed-value" --with-decryption --query Paramteres.{Value.Value})
 
